--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,48 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  padding: 0 15px;
+  background-color: #242e42;
+  height: 15vh;
   font-size: calc(10px + 2vmin);
   color: white;
 }
+
+.container {
+  height: 85vh;
+  width: 75%;
+  margin: 0 auto;
+  float: left;
+  background-color: #242e42;
+}
+.astros {
+  height: 85vh;
+  width: 25%;
+  margin: 0 auto;
+  float: left;
+  background-color: #242e42;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+.App-pos {
+  display: flex;
+  flex-direction: row;
+  width:60%;
+  float: left;
+  font-size: calc(5px + 2vmin);
+}
+
+.App-time {
+  display: flex;
+  flex-direction: row;
+  width:40%;
+  float: left;
+  font-size: calc(5px + 2vmin);
+}
+
 
 .App-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
